# brightwebapp

./: .gitignore  CHANGES.md  Dockerfile  docker-compose.yml  mkdocs.yaml  pyproject.toml
.github/workflows/: publish_pypi.yml  publish_testpypi.yml
api/: _generate_openapi_schema.py  endpoints.py  main.py
app/: index.py  requirements_pyodide_conversion.txt
brightwebapp/: brightway.py  main.py  modifications.py  supplychainmods.py  traversal.py  utility.py
dev/: 1 - The supply chain graph.ipynb  1S - Steel bike.ipynb  _environment.yaml  _requirements.txt  dev_steelbike.py
dev/databases/: databases.py
dev/traversal/: dev_traversal.py  dev_traversal_ecoinvent.py  dev_traversal_useeio.py
docs/: _requirements.txt  about.md  api.md  faq.md  index.md  webapp.md
docs/api/: api.md  brightway.md  endpoints.json  endpoints.md  main.md  modifications.md  openapi.json  supplychainmods.md  tests.md  traversal.md  utility.md  visualization.md
docs/development/: fastapi.md  webapp.md
docs/theory/: scopes.md  supplychain.md
joss/: paper.bib  paper.md
pyodide/: index.html  index.js
src/brightwebapp/: brightway.py  modifications.py  traversal.py
tests/: test_modifications.py  test_traversal.py  test_utility.py
tests/fixtures/: dataframes.py  main.py  modifications.py  supplychain.py  traversal.py  utility.py
